--- a/dashboard-webdriver/pom.xml
+++ b/dashboard-webdriver/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>dashboard-webdriver</artifactId>
-    <groupId>org.exist</groupId>
+    <groupId>org.exist-db</groupId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>sauce_quickstart</name>
@@ -34,7 +34,9 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -43,6 +45,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+		<version>2.4.3</version>
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                 </configuration>
