--- a/bower.json
+++ b/bower.json
@@ -3,29 +3,26 @@
   "description": "a eXistdb launchpad ",
   "main": "existdb-dashboard.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0-rc.2",
+    "polymer": "Polymer/polymer#^2.0.0",
     "app-layout": "PolymerElements/app-layout#^2.0.0",
     "paper-styles": "PolymerElements/paper-styles#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "iron-icons": "PolymerElements/iron-icons#^2.0.0",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.0",
     "iron-icon": "PolymerElements/iron-icon#^2.0.0",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^2.0.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
     "paper-item": "PolymerElements/paper-item#^2.0.0",
-    "existdb-login": "http://gitlab.exist-db.org/eXistdbElements/existdb-login.git"
+    "existdb-usermanager": "https://github.com/eXist-db/usermanager.git#6fdead04aa8c77b3ed127435230ba280e5d9a819",
+    "app-route": "PolymerElements/app-route#^2.0.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview",
-    "web-component-tester": "v6.0.0-prerelease.5",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.5"
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
   },
   "resolutions": {
-    "polymer": "^2.0.0-rc.2",
-    "iron-icon": "1 - 2",
-    "iron-icons": "^2.0.0",
-    "iron-iconset-svg": "1 - 2",
-    "iron-ajax": "1 - 2",
-    "paper-button": "^2.0.0",
-    "iron-flex-layout": "1 - 2",
-    "paper-styles": "^2.0.0"
+    "polymer": "^2.0.0"
   }
 }
