--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,11 @@
     "paper-item": "PolymerElements/paper-item#^2.0.0",
     "app-route": "PolymerElements/app-route#^2.0.0",
     "paper-ripple": "PolymerElements/paper-ripple#^2.0.0",
-    "existdb-usermanager": "https://github.com/eXist-db/usermanager.git#^0.16.2",
-    "existdb-packagemanager": "https://github.com/eXist-db/existdb-packagemanager.git#v4.2.1"
+    "existdb-packagemanager": "https://github.com/eXist-db/existdb-packagemanager/archive/v4.4.1.zip",
+    "existdb-launcher": "https://github.com/eXist-db/launcher.git#^1.0.2",
+    "existdb-usermanager": "https://github.com/eXist-db/usermanager.git#^0.16.3",
+    "repo-elements": "https://github.com/eXist-db/repo-elements/archive/master.zip",
+    "iron-lazy-pages": "^2.1.1"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
