--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,7 @@
     <!--<property name="app.name" value=""/>-->
     <property name="project.version" value="${package(version)}"/>
     <property name="project.app" value="${package(abbrev)}"/>
+    <property name="bundle.dir" value="build/default"/>
     <property name="build.dir" value="build"/>
     <target name="xar">
         <mkdir dir="${build.dir}"/>
@@ -17,6 +18,7 @@
     <target name="clean-polymer-build">
         <delete dir="${build.dir}/unbundled"/>
         <delete dir="${build.dir}/bundled"/>
+        <delete dir="${build.dir}/production"/>
     </target>
 
     <!--
@@ -29,8 +31,21 @@
     <target name="polymer-build-production" depends="clean-polymer-build">
         <exec executable="polymer">
             <arg value="build"/>
-            <arg value="--shell"/>
+        </exec>
+    </target>
+
+    <target name="polymer-build-production2" depends="clean-polymer-build">
+        <exec executable="polymer">
+            <arg value="build"/>
+            <arg value="--bundle"/>
+            <arg value="--sources"/>
+            <arg value="*-*.html"/>
+            <arg value="--entrypoint"/>
             <arg value="index.html"/>
+            <arg value="rewriteUrlsInTemplate"/>
+            <arg value="true"/>
+            <arg value="--html-minify"/>
+            <!--<arg value="-v"/>-->
         </exec>
     </target>
 
@@ -38,19 +53,37 @@
     <!--
     creates a xar file with optimized Polymer components
     -->
-    <target name="production-xar" depends="polymer-build-production">
+    <target name="production-xar" depends="polymer-build-production2">
         <mkdir dir="${build.dir}"/>
 
+        <copy todir="${bundle.dir}">
+            <fileset dir="${basedir}">
+                <include name="modules/**" />
+                <include name="resources/**" />
 
+                <include name="*.xml" />
+                <include name="*.xql" />
+
+                <include name="*.html" />
+                <include name="icon.svg" />
+            </fileset>
+        </copy>
+
+
+
+<!--
+        <copy file="admin.xql" todir="${build.dir}/bundled"/>
         <copy file="controller.xql" todir="${build.dir}/bundled"/>
         <copy file="expath-pkg.xml" todir="${build.dir}/bundled"/>
-        <copy file="configuration.xml" todir="${build.dir}/bundled"/>
+        <copy file="config.xml" todir="${build.dir}/bundled"/>
+        <copy file="index.html" todir="${build.dir}/bundled"/>
         <copy file="repo.xml" todir="${build.dir}/bundled"/>
         <copy file="icon.png" todir="${build.dir}/bundled"/>
         <copydir src="${basedir}/modules" dest="${build.dir}/bundled/modules" />
         <copydir src="${basedir}/resources" dest="${build.dir}/bundled/resources" />
+-->
 
-        <zip basedir="${build.dir}/bundled" destfile="${build.dir}/${project.app}-${project.version}-prod.xar" excludes="demo"/>
+        <zip basedir="${bundle.dir}" destfile="${build.dir}/${project.app}-${project.version}-prod.xar" excludes="demo"/>
     </target>
 
     <!--
