--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,7 @@
     <!--<property name="app.name" value=""/>-->
     <property name="project.version" value="${package(version)}"/>
     <property name="project.app" value="${package(abbrev)}"/>
-    <property name="bundle.dir" value="build/default"/>
+    <property name="bundle.dir" value="build/production"/>
     <property name="build.dir" value="build"/>
     <target name="xar">
         <mkdir dir="${build.dir}"/>
@@ -37,7 +37,7 @@
     <target name="polymer-build-production2" depends="clean-polymer-build">
         <exec executable="polymer">
             <arg value="build"/>
-            <arg value="--bundle"/>
+            <!--<arg value="&#45;&#45;bundle"/>-->
             <arg value="--sources"/>
             <arg value="*-*.html"/>
             <arg value="--entrypoint"/>
@@ -45,6 +45,7 @@
             <arg value="rewriteUrlsInTemplate"/>
             <arg value="true"/>
             <arg value="--html-minify"/>
+
             <!--<arg value="-v"/>-->
         </exec>
     </target>
@@ -53,7 +54,7 @@
     <!--
     creates a xar file with optimized Polymer components
     -->
-    <target name="production-xar" depends="polymer-build-production2">
+    <target name="production-xar" depends="polymer-build-production">
         <mkdir dir="${build.dir}"/>
 
         <copy todir="${bundle.dir}">
@@ -69,19 +70,63 @@
             </fileset>
         </copy>
 
+        <!-- unfortunately haven't a better way yet. -->
+        <!-- ##### DO NOT INCLUDE HTML AS THIS HAS GONE THOUGH OPTIMIZER IN `polymer-build-production` TARGET-->
+        <copy todir="${bundle.dir}/bower_components/existdb-launcher">
+            <fileset dir="${basedir}/bower_components/existdb-launcher">
+                <include name="modules/**" />
+                <include name="resources/**" />
+                <include name="*.xml" />
+                <include name="*.xql" />
+                <include name="icon.svg" />
+            </fileset>
+        </copy>
+
+        <copy todir="${bundle.dir}/bower_components/existdb-packagemanager">
+            <fileset dir="${basedir}/bower_components/existdb-packagemanager">
+                <include name="modules/**" />
+                <include name="resources/**" />
+                <include name="*.xml" />
+                <include name="*.xql" />
+                <include name="icon.svg" />
+            </fileset>
+        </copy>
+
+        <copy todir="${bundle.dir}/bower_components/existdb-usermanager">
+            <fileset dir="${basedir}/bower_components/existdb-usermanager">
+                <include name="modules/**" />
+                <include name="resources/**" />
+                <include name="*.xml" />
+                <include name="*.xql" />
+                <include name="icon.svg" />
+            </fileset>
+        </copy>
+
+        <copy todir="${bundle.dir}/bower_components/vaadin-progress-bar" overwrite="true">
+            <fileset dir="${basedir}/bower_components/vaadin-progress-bar">
+                <include name="modules/**" />
+                <include name="resources/**" />
+                <include name="src/**" />
+                <include name="theme/**" />
+                <include name="*.xml" />
+                <include name="*.xql" />
+                <include name="**/*.html" />
+                <include name="icon.svg" />
+            </fileset>
+        </copy>
 
 
-<!--
-        <copy file="admin.xql" todir="${build.dir}/bundled"/>
-        <copy file="controller.xql" todir="${build.dir}/bundled"/>
-        <copy file="expath-pkg.xml" todir="${build.dir}/bundled"/>
-        <copy file="config.xml" todir="${build.dir}/bundled"/>
-        <copy file="index.html" todir="${build.dir}/bundled"/>
-        <copy file="repo.xml" todir="${build.dir}/bundled"/>
-        <copy file="icon.png" todir="${build.dir}/bundled"/>
-        <copydir src="${basedir}/modules" dest="${build.dir}/bundled/modules" />
-        <copydir src="${basedir}/resources" dest="${build.dir}/bundled/resources" />
--->
+        <!--
+                <copy file="admin.xql" todir="${build.dir}/bundled"/>
+                <copy file="controller.xql" todir="${build.dir}/bundled"/>
+                <copy file="expath-pkg.xml" todir="${build.dir}/bundled"/>
+                <copy file="config.xml" todir="${build.dir}/bundled"/>
+                <copy file="index.html" todir="${build.dir}/bundled"/>
+                <copy file="repo.xml" todir="${build.dir}/bundled"/>
+                <copy file="icon.png" todir="${build.dir}/bundled"/>
+                <copydir src="${basedir}/modules" dest="${build.dir}/bundled/modules" />
+                <copydir src="${basedir}/resources" dest="${build.dir}/bundled/resources" />
+        -->
 
         <zip basedir="${bundle.dir}" destfile="${build.dir}/${project.app}-${project.version}-prod.xar" excludes="demo"/>
     </target>
