--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "app-route": "PolymerElements/app-route#^2.0.0",
     "paper-ripple": "PolymerElements/paper-ripple#^2.0.0",
     "existdb-launcher": "https://github.com/eXist-db/launcher.git#^1.2.1",
-    "existdb-usermanager": "https://github.com/eXist-db/usermanager.git#^0.16.5",
+    "existdb-usermanager": "https://github.com/eXist-db/usermanager.git#^v0.16.5",
     "existdb-backup": "https://github.com/eXist-db/existdb-backup.git#^1.1.0",
     "repo-elements": "https://github.com/eXist-db/repo-elements/archive/master.zip",
     "iron-lazy-pages": "^2.1.1",
