--- a/package.json
+++ b/package.json
@@ -4,23 +4,30 @@
   "description": "existdb-dashboard",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cypress": "cypress run"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/eXist-db/dashboard.git"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bluebird": "^3.5.5",
+    "bower": "^1.8.0",
     "brace-expansion": "^1.1.4",
+    "chai": "^4.2.0",
+    "chai-jquery": "^2.1.0",
+    "cypress": "^3.4.1",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-exist": "^1.4.1",
     "gulp-less": "^3.1.0",
     "gulp-watch": "^4.3.6",
+    "jquery": "^3.4.1",
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-clean-css": "^1.5.1",
-    "bower": "^1.8.0"
-  }
+    "lodash": "^4.17.15"
+  },
+  "dependencies": {}
 }
