--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-clean-css": "^1.5.1",
     "bower": "^1.8.0"
+  },
+  "dependencies": {
+    "lit-element": "^2.2.1"
   }
 }
