--- a/assets/@polymer/paper-ripple/package.json
+++ b/assets/@polymer/paper-ripple/package.json
@@ -1,5 +1,5 @@
 {
-  "_from": "@polymer/paper-ripple@^3.0.0-pre.26",
+  "_from": "@polymer/paper-ripple@^3.0.1",
   "_id": "@polymer/paper-ripple@3.0.1",
   "_inBundle": false,
   "_integrity": "sha512-dgOe12GyCF1VZBLUQqnzGWlf3xb255FajNCVB1VFj/AtskYtoamnafa7m3a+1vs+C8qbg4Benn5KwgxVDSW4cg==",
@@ -8,21 +8,22 @@
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@polymer/paper-ripple@^3.0.0-pre.26",
+    "raw": "@polymer/paper-ripple@^3.0.1",
     "name": "@polymer/paper-ripple",
     "escapedName": "@polymer%2fpaper-ripple",
     "scope": "@polymer",
-    "rawSpec": "^3.0.0-pre.26",
+    "rawSpec": "^3.0.1",
     "saveSpec": null,
-    "fetchSpec": "^3.0.0-pre.26"
+    "fetchSpec": "^3.0.1"
   },
   "_requiredBy": [
+    "/",
     "/@polymer/paper-behaviors"
   ],
   "_resolved": "https://registry.npmjs.org/@polymer/paper-ripple/-/paper-ripple-3.0.1.tgz",
   "_shasum": "28e506f079f840703bf8cbfd62966e1e83ebc3c3",
-  "_spec": "@polymer/paper-ripple@^3.0.0-pre.26",
-  "_where": "/private/var/folders/p7/bz774dq9345cvlw_pqqxjz3w0000gn/T/asset_stageJbfB6Q/node_modules/@polymer/paper-behaviors",
+  "_spec": "@polymer/paper-ripple@^3.0.1",
+  "_where": "/private/var/folders/p7/bz774dq9345cvlw_pqqxjz3w0000gn/T/asset_stagemPihEE",
   "author": {
     "name": "The Polymer Authors"
   },
