--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-input": "^3.0.2",
+    "@polymer/paper-ripple": "^3.0.1",
     "@polymer/paper-styles": "^3.0.1",
     "@webcomponents/webcomponentsjs": "^2.3.0",
     "lit-element": "^2.2.1"
