--- a/package.json
+++ b/package.json
@@ -23,15 +23,23 @@
   },
   "dependencies": {
     "@polymer/app-layout": "^3.1.0",
+    "@polymer/app-route": "^3.0.2",
     "@polymer/iron-ajax": "^3.0.1",
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-icons": "^3.0.1",
     "@polymer/paper-button": "^3.0.1",
+    "@polymer/paper-card": "^3.0.1",
     "@polymer/paper-dialog": "^3.0.1",
+    "@polymer/paper-drawer-panel": "^3.0.2",
     "@polymer/paper-input": "^3.0.2",
+    "@polymer/paper-item": "^3.0.1",
     "@polymer/paper-ripple": "^3.0.1",
     "@polymer/paper-styles": "^3.0.1",
     "@webcomponents/webcomponentsjs": "^2.3.0",
-    "lit-element": "^2.2.1"
+    "lit-element": "^2.2.1",
+    "nanoid": "^2.1.4",
+    "pwa-helpers": "^0.9.1",
+    "redux": "^4.0.4",
+    "reselect": "^4.0.0"
   }
 }
