--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@polymer/paper-item": "^3.0.1",
     "@polymer/paper-ripple": "^3.0.1",
     "@polymer/paper-styles": "^3.0.1",
+    "@vaadin/router": "^1.5.1",
     "@webcomponents/webcomponentsjs": "^2.3.0",
+    "animejs": "^3.1.0",
     "lit-element": "^2.2.1",
     "nanoid": "^2.1.4",
     "pwa-helpers": "^0.9.1",
