--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@polymer/paper-card": "^3.0.1",
     "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-drawer-panel": "^3.0.2",
+    "@polymer/paper-dropdown-menu": "^3.0.1",
     "@polymer/paper-icon-button": "^3.0.2",
     "@polymer/paper-input": "^3.0.2",
     "@polymer/paper-item": "^3.0.1",
@@ -54,6 +55,7 @@
     "nanoid": "^2.1.4",
     "pwa-helpers": "^0.9.1",
     "redux": "^4.0.4",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "web-animations-js": "^2.3.2"
   }
 }
