--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-watch": "^5.0.1"
   },
   "dependencies": {
+    "@material/mwc-fab": "^0.10.0",
     "@polymer/app-layout": "^3.1.0",
     "@polymer/app-route": "^3.0.2",
     "@polymer/app-storage": "^3.0.2",
@@ -36,6 +37,7 @@
     "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-drawer-panel": "^3.0.2",
     "@polymer/paper-dropdown-menu": "^3.0.1",
+    "@polymer/paper-fab": "^3.0.1",
     "@polymer/paper-icon-button": "^3.0.2",
     "@polymer/paper-input": "^3.0.2",
     "@polymer/paper-item": "^3.0.1",
