--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "animejs": "^3.1.0",
     "lit-element": "^2.2.1",
     "nanoid": "^2.1.4",
+    "polymer-toggle-icon": "^3.0.0",
     "pwa-helpers": "^0.9.1",
     "redux": "^4.0.4",
     "reselect": "^4.0.0",
