--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@polymer/iron-iconset-svg": "^3.0.1",
     "@polymer/iron-list": "^3.0.2",
     "@polymer/iron-pages": "^3.0.1",
+    "@polymer/paper-badge": "^3.1.0",
     "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-card": "^3.0.1",
     "@polymer/paper-dialog": "^3.0.1",
