--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@polymer/paper-toast": "^3.0.1",
     "@polymer/paper-toggle-button": "^3.0.1",
     "@vaadin/router": "^1.5.1",
+    "@vaadin/vaadin-grid": "^5.4.12",
+    "@vaadin/vaadin-notification": "^1.4.0",
     "@vaadin/vaadin-upload": "^4.2.2",
     "@webcomponents/webcomponentsjs": "^2.3.0",
     "animejs": "^3.1.0",
