--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "gulp-watch": "^4.3.6",
     "jquery": "^3.4.1",
     "less-plugin-autoprefix": "^1.5.1",
-    "less-plugin-clean-css": "^1.5.1",
-    "lodash": "^4.17.15"
+    "less-plugin-clean-css": "^1.5.1"
   },
   "dependencies": {}
 }
