--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "cypress": "^7.4.0",
     "del": "^2.2.0",
     "gulp": "^4.0.2",
-    "gulp-less": "^3.1.0",
+    "gulp-less": "^4.0.1",
     "gulp-watch": "^5.0.1",
     "jquery": "^3.6.0",
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-clean-css": "^1.5.1"
-  }
+  },
+  "dependencies": {}
 }
