--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "gulp-less": "^4.0.1",
     "gulp-watch": "^5.0.1",
     "jquery": "^3.6.0",
-    "less-plugin-autoprefix": "^1.5.1",
-    "less-plugin-clean-css": "^1.5.1"
+    "less-plugin-autoprefix": "^1.5.1"
   },
   "dependencies": {}
 }
